// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleCard matches the snapshot 1`] = `
<DocumentFragment>
  <a
    aria-label="Clique para ler mais sobre o artigo"
    class="border border-blog-border overflow-hidden h-full w-full flex flex-col rounded focus-visible:outline focus-visible:outline-2 focus-visible:outline-blog-foreground-readable-hover"
    data-testid="article-card-link"
    href="/artigos/bee102e1-6f8b-45ad-90cf-b4c17e4420a3/crux-fugit-curatio-stillicidium-bardus"
    id="article-card-link"
    role="link"
  >
    <div
      class="relative h-[200px] shrink-0 mb-2"
      data-testid="article-card-image"
    >
      <img
        alt="Approbo vicissitudo subiungo."
        class="absolute object-cover"
        data-nimg="fill"
        decoding="async"
        loading="lazy"
        role="img"
        sizes="(max-width: 1920) 100vw, (max-width: 960) 50vw, 33vw"
        src="/_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=3840&q=75"
        srcset="/_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=256&q=75 256w, /_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=384&q=75 384w, /_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=640&q=75 640w, /_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=750&q=75 750w, /_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=828&q=75 828w, /_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=1080&q=75 1080w, /_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=1200&q=75 1200w, /_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=1920&q=75 1920w, /_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=2048&q=75 2048w, /_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=3840&q=75 3840w"
        style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
      />
    </div>
    <div
      class="h-full flex flex-col gap-2 px-2 pb-2"
    >
      <p
        class="max-h-[calc(1.5rem_*_3)] line-clamp-3 font-extrabold text-blog-foreground-readable text-base transition-all duration-500"
        data-testid="article-card-title"
      >
        Suppellex a cognatus arca aliquam.
      </p>
      <p
        class="max-h-[calc(1.25rem_*_3)] line-clamp-3 text-[hsl(0,0%,55%)] text-sm group-hover:underline"
        data-testid="article-card-description"
      >
        Adnuo natus arca odit subseco ambulo. Suasoria cupio admiratio facilis sonitus dolorum. Occaecati venio apto apud timor cubicularis asperiores vestigium conqueror tantillus.
      </p>
      <p
        class="mt-auto text-xs"
        data-testid="article-card-datetime"
      >
        <small>
          <time>
            10 de março de 2025, às 20:11
          </time>
        </small>
      </p>
    </div>
  </a>
</DocumentFragment>
`;

exports[`ArticleCardList matches the snapshot 1`] = `
<DocumentFragment>
  <div
    aria-live="polite"
    class="max-w-screen-2xl mx-auto px-4 flex items-center mb-10"
    data-testid="article-card-list"
    id="article-card-list"
  >
    <h2
      class="sr-only"
      id="article-list-title"
    >
      Lista de Artigos
    </h2>
    <ul
      aria-labelledby="article-list-title"
      class="w-full grid grid-cols-3 max-[800px]:grid-cols-2 max-[500px]:grid-cols-1 gap-4"
      role="list"
    >
      <li
        class="w-full max-h-[calc(200px_+_0.5rem_+_1.5rem_*_3_+_1.25rem_*_3_+_1rem_+_0.5rem_*_2_+_0.5rem)] p-1 rounded-lg transition-shadow duration-500 hover:shadow-blog-highlight group"
        role="listitem"
      >
        <a
          aria-label="Clique para ler mais sobre o artigo"
          class="border border-blog-border overflow-hidden h-full w-full flex flex-col rounded focus-visible:outline focus-visible:outline-2 focus-visible:outline-blog-foreground-readable-hover"
          data-testid="article-card-link"
          href="/artigos/bee102e1-6f8b-45ad-90cf-b4c17e4420a3/crux-fugit-curatio-stillicidium-bardus"
          id="article-card-link"
          role="link"
        >
          <div
            class="relative h-[200px] shrink-0 mb-2"
            data-testid="article-card-image"
          >
            <img
              alt="Approbo vicissitudo subiungo."
              class="absolute object-cover"
              data-nimg="fill"
              decoding="async"
              loading="lazy"
              role="img"
              sizes="(max-width: 1920) 100vw, (max-width: 960) 50vw, 33vw"
              src="/_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=3840&q=75"
              srcset="/_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=256&q=75 256w, /_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=384&q=75 384w, /_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=640&q=75 640w, /_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=750&q=75 750w, /_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=828&q=75 828w, /_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=1080&q=75 1080w, /_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=1200&q=75 1200w, /_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=1920&q=75 1920w, /_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=2048&q=75 2048w, /_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=3840&q=75 3840w"
              style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
            />
          </div>
          <div
            class="h-full flex flex-col gap-2 px-2 pb-2"
          >
            <p
              class="max-h-[calc(1.5rem_*_3)] line-clamp-3 font-extrabold text-blog-foreground-readable text-base transition-all duration-500"
              data-testid="article-card-title"
            >
              Suppellex a cognatus arca aliquam.
            </p>
            <p
              class="max-h-[calc(1.25rem_*_3)] line-clamp-3 text-[hsl(0,0%,55%)] text-sm group-hover:underline"
              data-testid="article-card-description"
            >
              Adnuo natus arca odit subseco ambulo. Suasoria cupio admiratio facilis sonitus dolorum. Occaecati venio apto apud timor cubicularis asperiores vestigium conqueror tantillus.
            </p>
            <p
              class="mt-auto text-xs"
              data-testid="article-card-datetime"
            >
              <small>
                <time>
                  10 de março de 2025, às 20:11
                </time>
              </small>
            </p>
          </div>
        </a>
      </li>
      <li
        class="w-full max-h-[calc(200px_+_0.5rem_+_1.5rem_*_3_+_1.25rem_*_3_+_1rem_+_0.5rem_*_2_+_0.5rem)] p-1 rounded-lg transition-shadow duration-500 hover:shadow-blog-highlight group"
        role="listitem"
      >
        <a
          aria-label="Clique para ler mais sobre o artigo"
          class="border border-blog-border overflow-hidden h-full w-full flex flex-col rounded focus-visible:outline focus-visible:outline-2 focus-visible:outline-blog-foreground-readable-hover"
          data-testid="article-card-link"
          href="/artigos/eb10003d-88d1-449f-a80c-3c6db8201013/crux-fugit-curatio-stillicidium-bardus"
          id="article-card-link"
          role="link"
        >
          <div
            class="relative h-[200px] shrink-0 mb-2"
            data-testid="article-card-image"
          >
            <img
              alt="Virga iusto veritas saepe cribro depereo peccatus inflammatio vester versus crur vix."
              class="absolute object-cover"
              data-nimg="fill"
              decoding="async"
              loading="lazy"
              role="img"
              sizes="(max-width: 1920) 100vw, (max-width: 960) 50vw, 33vw"
              src="/_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=3840&q=75"
              srcset="/_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=256&q=75 256w, /_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=384&q=75 384w, /_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=640&q=75 640w, /_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=750&q=75 750w, /_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=828&q=75 828w, /_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=1080&q=75 1080w, /_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=1200&q=75 1200w, /_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=1920&q=75 1920w, /_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=2048&q=75 2048w, /_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=3840&q=75 3840w"
              style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
            />
          </div>
          <div
            class="h-full flex flex-col gap-2 px-2 pb-2"
          >
            <p
              class="max-h-[calc(1.5rem_*_3)] line-clamp-3 font-extrabold text-blog-foreground-readable text-base transition-all duration-500"
              data-testid="article-card-title"
            >
              Suppellex a cognatus arca aliquam.
            </p>
            <p
              class="max-h-[calc(1.25rem_*_3)] line-clamp-3 text-[hsl(0,0%,55%)] text-sm group-hover:underline"
              data-testid="article-card-description"
            >
              Abundans aequitas volaticus minus barba casus tam. Nobis voluntarius tyrannus capto. Quam tricesimus aro accusamus aegrus depereo.
            </p>
            <p
              class="mt-auto text-xs"
              data-testid="article-card-datetime"
            >
              <small>
                <time>
                  10 de março de 2025, às 20:11
                </time>
              </small>
            </p>
          </div>
        </a>
      </li>
      <li
        class="w-full max-h-[calc(200px_+_0.5rem_+_1.5rem_*_3_+_1.25rem_*_3_+_1rem_+_0.5rem_*_2_+_0.5rem)] p-1 rounded-lg transition-shadow duration-500 hover:shadow-blog-highlight group"
        role="listitem"
      >
        <a
          aria-label="Clique para ler mais sobre o artigo"
          class="border border-blog-border overflow-hidden h-full w-full flex flex-col rounded focus-visible:outline focus-visible:outline-2 focus-visible:outline-blog-foreground-readable-hover"
          data-testid="article-card-link"
          href="/artigos/fd0252c5-f9ed-4e78-9c47-9096c5e92c90/crux-fugit-curatio-stillicidium-bardus"
          id="article-card-link"
          role="link"
        >
          <div
            class="relative h-[200px] shrink-0 mb-2"
            data-testid="article-card-image"
          >
            <img
              alt="Caelestis omnis color veritatis verbera."
              class="absolute object-cover"
              data-nimg="fill"
              decoding="async"
              loading="lazy"
              role="img"
              sizes="(max-width: 1920) 100vw, (max-width: 960) 50vw, 33vw"
              src="/_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=3840&q=75"
              srcset="/_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=256&q=75 256w, /_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=384&q=75 384w, /_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=640&q=75 640w, /_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=750&q=75 750w, /_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=828&q=75 828w, /_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=1080&q=75 1080w, /_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=1200&q=75 1200w, /_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=1920&q=75 1920w, /_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=2048&q=75 2048w, /_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=3840&q=75 3840w"
              style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
            />
          </div>
          <div
            class="h-full flex flex-col gap-2 px-2 pb-2"
          >
            <p
              class="max-h-[calc(1.5rem_*_3)] line-clamp-3 font-extrabold text-blog-foreground-readable text-base transition-all duration-500"
              data-testid="article-card-title"
            >
              Suppellex a cognatus arca aliquam.
            </p>
            <p
              class="max-h-[calc(1.25rem_*_3)] line-clamp-3 text-[hsl(0,0%,55%)] text-sm group-hover:underline"
              data-testid="article-card-description"
            >
              Versus a voluptatibus cotidie voluptate pecco tricesimus necessitatibus. Circumvenio ocer tandem una temeritas sublime urbs commodi. Defendo creber cunctatio cuius cometes quasi curtus voluptate.
            </p>
            <p
              class="mt-auto text-xs"
              data-testid="article-card-datetime"
            >
              <small>
                <time>
                  10 de março de 2025, às 20:11
                </time>
              </small>
            </p>
          </div>
        </a>
      </li>
      <li
        class="w-full max-h-[calc(200px_+_0.5rem_+_1.5rem_*_3_+_1.25rem_*_3_+_1rem_+_0.5rem_*_2_+_0.5rem)] p-1 rounded-lg transition-shadow duration-500 hover:shadow-blog-highlight group"
        role="listitem"
      >
        <a
          aria-label="Clique para ler mais sobre o artigo"
          class="border border-blog-border overflow-hidden h-full w-full flex flex-col rounded focus-visible:outline focus-visible:outline-2 focus-visible:outline-blog-foreground-readable-hover"
          data-testid="article-card-link"
          href="/artigos/d6931872-98a2-4c38-8c05-dd8dfdd1ab9c/crux-fugit-curatio-stillicidium-bardus"
          id="article-card-link"
          role="link"
        >
          <div
            class="relative h-[200px] shrink-0 mb-2"
            data-testid="article-card-image"
          >
            <img
              alt="Curto."
              class="absolute object-cover"
              data-nimg="fill"
              decoding="async"
              loading="lazy"
              role="img"
              sizes="(max-width: 1920) 100vw, (max-width: 960) 50vw, 33vw"
              src="/_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=3840&q=75"
              srcset="/_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=256&q=75 256w, /_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=384&q=75 384w, /_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=640&q=75 640w, /_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=750&q=75 750w, /_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=828&q=75 828w, /_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=1080&q=75 1080w, /_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=1200&q=75 1200w, /_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=1920&q=75 1920w, /_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=2048&q=75 2048w, /_next/image?url=http%3A%2F%2F127.0.0.1%3A1337%2Fusr%2Fshare%2Fwaft.png&w=3840&q=75 3840w"
              style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
            />
          </div>
          <div
            class="h-full flex flex-col gap-2 px-2 pb-2"
          >
            <p
              class="max-h-[calc(1.5rem_*_3)] line-clamp-3 font-extrabold text-blog-foreground-readable text-base transition-all duration-500"
              data-testid="article-card-title"
            >
              Suppellex a cognatus arca aliquam.
            </p>
            <p
              class="max-h-[calc(1.25rem_*_3)] line-clamp-3 text-[hsl(0,0%,55%)] text-sm group-hover:underline"
              data-testid="article-card-description"
            >
              Suus caveo cauda ratione conitor theca decumbo tero vulariter. Aranea venia id voluptatem repellat. In est appositus constans acquiro arto tamdiu adaugeo cornu unus.
            </p>
            <p
              class="mt-auto text-xs"
              data-testid="article-card-datetime"
            >
              <small>
                <time>
                  10 de março de 2025, às 20:11
                </time>
              </small>
            </p>
          </div>
        </a>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
